nope fuck these compilation times

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 colored = "2.1.0"
 directories = "5.0.1"
+extism = "0.5.5"
 rhai = "1.16.3"
+serde = "1.0.195"
 termsize = "0.1.6"
