--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
-name = "combinators"
+name = "kismesis"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 colored = "2.1.0"
 directories = "5.0.1"
-extism = "1.0.0"
-serde = "1.0.195"
+extism = { version = "1.0.0", optional = true } 
+serde = { version = "1.0.195", optional = true }
+serde_json = { version = "1.0.111", features = ["unbounded_depth"] , optional = true}
 termsize = "0.1.6"
+
+[features]
+default = ["plugins"]
+plugins = ["dep:extism", "dep:serde", "dep:serde_json"]
