--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 colored = "2.1.0"
 directories = "5.0.1"
 extism = { version = "1.0.0", optional = true } 
+ron = "0.8.1"
 serde = { version = "1.0.195", optional = true }
 serde_json = { version = "1.0.111", features = ["unbounded_depth"] , optional = true}
 termsize = "0.1.6"
