--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,11 @@ colored = "2.1.0"
 directories = "5.0.1"
 extism = { version = "1.0.0", optional = true } 
 ron = "0.8.1"
-serde = { version = "1.0.195", optional = true }
+serde = { version = "1.0.195", features=["derive"], optional = true }
 serde_json = { version = "1.0.111", features = ["unbounded_depth"] , optional = true}
 termsize = "0.1.6"
 
 [features]
 default = ["plugins"]
-plugins = ["dep:extism", "dep:serde", "dep:serde_json"]
+serde = ["dep:serde", "dep:serde_json"]
+plugins = ["dep:extism", "serde"]
