--- a/.helix/languages.toml
+++ b/.helix/languages.toml
@@ -2,3 +2,7 @@
 name = "rust"
 auto-format = false
 indent = {unit="\t", tab-width=4}
+
+[language-server.rust-analyzer.config]
+check.command = "clippy"
+cargo.features = ["projects", "plugins"]
