--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,20 +2,22 @@
 name = "kismesis"
 description = "A static site generator with plugins and a custom markup language."
 license-file = "LICENSE.md"
-version = "0.1.1"
+version = "0.1.3"
 edition = "2021"
 repository = "https://github.com/lilith-in-starlight/kismesis"
 
 [dependencies]
-colored = "2.1.0"
-directories = "5.0.1"
+colored = { version = "2.1.0", optional = true }
+directories = { version = "5.0.1", optional = true }
 extism = { version = "1.0.0", optional = true } 
-ron = "0.8.1"
+ron = { version = "0.8.1", optional = true }
 serde = { version = "1.0.195", features=["derive"], optional = true }
 serde_json = { version = "1.0.111", features = ["unbounded_depth"] , optional = true }
-termsize = "0.1.6"
+termsize = { version = "0.1.6", optional = true }
 
 [features]
-default = ["plugins"]
 serde = ["dep:serde", "dep:serde_json"]
 plugins = ["dep:extism", "serde"]
+projects = ["reporting", "dep:ron", "dep:directories"]
+reporting = ["dep:colored", "dep:termsize"]
+pdk = ["serde"]
