--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,6 @@ lto="off"
 
 [lints.clippy]
 enum_glob_use = "warn"
-pedantic = "warn"
-nursery = "warn"
+pedantic = {level="warn", priority=-1}
+nursery = {level="warn", priority=-1}
 unwrap_used = "warn"
