Store original text positions in tokens

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/lilith-in-starlight/kismesis"
 [dependencies]
 colored = { version = "2.1.0", optional = true }
 extism = { version = "1.0.0", optional = true } 
+extism-pdk = { version = "1.2.0", optional = true }
 htmlize = "1.0.3"
 serde = { version = "1.0.195", features=["derive"], optional = true }
 serde_json = { version = "1.0.111", features = ["unbounded_depth"] , optional = true }
@@ -18,7 +19,7 @@ termsize = { version = "0.1.6", optional = true }
 serde = ["dep:serde", "dep:serde_json"]
 plugins = ["dep:extism", "serde"]
 reporting = ["dep:colored", "dep:termsize"]
-pdk = ["serde"]
+pdk = ["serde", "dep:extism-pdk"]
 
 [profile.dev]
 lto="off"
