--- a/src/.helix/languages.toml
+++ b/src/.helix/languages.toml
@@ -4,4 +4,4 @@ indent = {unit="\t", tab-width=4}
 
 [language-server.rust-analyzer.config]
 check.command = "clippy"
-cargo.features = ["pdk", "reporting"]
+# cargo.features = ["pdk", "plugins", "reporting"]
